# ferris-sign

./: Cargo.toml  README.md
src/: crypto.rs  main.rs  rekor_api.rs
test_data/: test_digest.txt
